Small fix in control panel dark mode

--- a/src/css/dark_theme/general.less
+++ b/src/css/dark_theme/general.less
@@ -1804,6 +1804,10 @@ select.colorselector {
   text-decoration: underline;
 }
 
+.controlpanel-game--infobox tr:nth-child(even) {
+  background-color: var(--dark-30) !important;
+}
+
 /* studio */
 #popin_resultDlg_close>i {
   color: white;
